--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "grommet": "^2.17.2",
+    "grommet-controls": "^3.0.1",
     "grommet-icons": "^4.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
